--- a/ASP.NET/Views/Movies/Random.cshtml
+++ b/ASP.NET/Views/Movies/Random.cshtml
@@ -1,8 +1,24 @@
-﻿@model ASP.NET.Models.Movie
+﻿@model ASP.NET.ViewModels.RandomMovieViewModel
 @{
-    ViewBag.Title = "Random";
+    ViewBag.Title = "Randoms";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
+@{
+var className = Model.Customers.Count > 0 ? "popular" : null;
+}
 
-<h2>@Model.Name</h2>
 
+<h2 class="@className">@Model.Movie.Name</h2>
+@if (Model.Customers.Count == 0)
+{
+    <text>No one has rented this movie before.</text>
+}
+else 
+{ 
+    <ul>
+        @foreach (var Customer in Model.Customers)
+        {
+            <li>@Customer.Name</li>
+        }
+    </ul>
+} 
