--- a/ASP.NET/Views/Shared/_Layout.cshtml
+++ b/ASP.NET/Views/Shared/_Layout.cshtml
@@ -1,5 +1,5 @@
 ﻿@*
-    model ASP.NET.ViewModels.RandomMovieViewModel
+    model ASP.NET.ViewModels.RandomKsiazkaViewModel
 *@
 <!DOCTYPE html>
 <html>
@@ -13,7 +13,7 @@
 </head>
 <body>
     <!-- Wywolujemy nasz partial view - naglowek-->
-    @Html.Partial("_NavBar") <!-- Model.Movie) -->
+    @Html.Partial("_NavBar") <!-- Model.Ksiazka) -->
     <div class="container body-content">
         @RenderBody()
         <hr />
