--- a/ASP.NET/Views/Customer/Details.cshtml
+++ b/ASP.NET/Views/Customer/Details.cshtml
@@ -1,5 +1,6 @@
 ﻿
 @model ASP.NET.Models.Customer
+
 @{
     ViewBag.Title = "Model.Name";
     Layout = "~/Views/Shared/_Layout.cshtml";
@@ -7,3 +8,5 @@
 
 <h2>Details</h2>
 <h2>@Model.Name</h2>
+<p>Membership-type: @Model.MembershipType.Nazwa</p>
+
