--- a/ASP.NET/Views/Shared/_NavBar.cshtml
+++ b/ASP.NET/Views/Shared/_NavBar.cshtml
@@ -22,7 +22,7 @@
                 <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
                 <li>@Html.ActionLink("Produkty", "Produkty", "Home")</li>
                 <li>@Html.ActionLink("Customer", "Index", "Customer")</li>
-                <li>@Html.ActionLink("Movies", "Index", "Movies")</li>
+                <li>@Html.ActionLink("Ksiazki", "Index", "Ksiazki")</li>
             </ul>
             @Html.Partial("_LoginPartial")
         </div>
